# obscura

./: .containerignore  AGENTS.md  Cargo.toml  Containerfile  Dockerfile  FORK.md  README.md  SECURITY.md  deny.toml  docker-compose.yml  verify_issue_35.js
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docker-ghcr.yml  docker.yml  release.yml
crates/obscura/: Cargo.toml
crates/obscura-browser/: Cargo.toml
crates/obscura-browser/src/: context.rs  lib.rs  page.rs  url_guard.rs
crates/obscura-browser/tests/: bounded_full_load_scripts.rs  hh_login_full_load.rs
crates/obscura-browser/tests/fixtures/hh-login-minimized/: index.html
crates/obscura-browser/tests/fixtures/hh-login-minimized/assets/: async.js  deferred.js  regular-after.js  regular-hangs.js
crates/obscura-browser/tests/fixtures/js-heavy-page/: index.html
crates/obscura-browser/tests/fixtures/js-heavy-page/assets/: async.js  compact-busy-loop.js  deferred.js  post-busy-loop.js
crates/obscura-cdp/: Cargo.toml
crates/obscura-cdp/src/: cookie_params.rs  dispatch.rs  lib.rs  server.rs
crates/obscura-cdp/src/domains/: accessibility.rs  dom.rs  emulation.rs  fetch.rs  input.rs  io.rs  mod.rs  network.rs  page.rs  runtime.rs  storage.rs  target.rs
crates/obscura-cdp/tests/: cdp_click_submit_parity.rs  concurrent_connections_heavy_page.rs  concurrent_navigations.rs  concurrent_navigations_with_fetch.rs  control_plane_unblocked.rs  dynamic_script_onload_fires.rs  file_scheme_gate.rs  form_submit_method_bypasses_listener.rs  iframe_event_dispatch.rs  input_key_event_escaping.rs  scroll_box_geometry.rs  scroll_event_on_assignment.rs  structured_clone_crypto_parity.rs  treewalker_document_order.rs
crates/obscura-cli/: Cargo.toml
crates/obscura-cli/src/: main.rs  worker.rs  x_scraper.rs
crates/obscura-cli/tests/: mcp_client.rs
crates/obscura-dom/: Cargo.toml
crates/obscura-dom/src/: lib.rs  selector.rs  serialize.rs  style.rs  tree.rs  tree_sink.rs
crates/obscura-js/: Cargo.toml  build.rs
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/src/: cdp_watchdog.rs  deno_extensions.rs  lib.rs  module_loader.rs  ops.rs  runtime.rs
crates/obscura-js/tests/: op_queue_reentrancy.rs
crates/obscura-mcp/: Cargo.toml
crates/obscura-mcp/src/: http.rs  install.rs  lib.rs  main.rs  mcp.rs  wizard.rs
crates/obscura-mcp/tests/: cors_preflight.rs  install.rs  mcp.rs
crates/obscura-net/: Cargo.toml
crates/obscura-net/src/: client.rs  cookies.rs  encoding.rs  lib.rs  stealth_client.rs  wreq_client.rs
crates/obscura-net/tests/: stealth_ssrf.rs
crates/obscura/src/: browser.rs  config.rs  lib.rs  page.rs
crates/obscura/tests/: dynamic_stylesheet.rs  interception.rs  sequential_runtime_fetch.rs
docs/: container.md
hooks/: hooks.json  install.js
registry/agents/: obscura-browser.md
registry/skill/: SKILL.md
registry/skills/: obscura-fetch.md  obscura-pipeline.md
registry/skills/obscura-scrape/: SKILL.md
reports/005380.KS/2026-05-13/: complete_report.md
reports/005380.KS/2026-05-13/1_analysts/: market.md  sentiment.md
reports/005380.KS/2026-05-13/2_research/: bear.md  bull.md
reports/005380.KS/2026-05-13/3_trading/: trader.md
reports/005380.KS/2026-05-13/4_risk/: aggressive.md  conservative.md  neutral.md
reports/005380.KS/2026-05-13/5_portfolio/: decision.md
reports/005380.KS/2026-05-13/reports/: fundamentals_report.md  investment_plan.md  news_report.md
reports/현대차/2026-05-13/reports/: market_report.md
scripts/: sync-upstream.sh
security-audit/: audit-findings.md  security-advisory.md  session-handoff.md
security-audit/patches/: 0001-fix-browser-centralize-url_is_file_scheme-for-the-fi.patch  0002-fix-net-js-resolve-time-SSRF-guard-IP-denylist-body-.patch  0003-fix-net-validate-Domain-cookie-scope-and-restrict-ja.patch  0004-fix-dom-bound-serialization-text-import-recursion-an.patch  0005-fix-js-remove-Deno.core.ops-from-the-page-realm.patch  0006-fix-cdp-gate-file-on-interception-path-validate-WS-O.patch  0007-fix-mcp-file-gate-Content-Length-cap-Origin-allowlis.patch  0008-fix-cli-thread-allow-file-access-to-MCP-redact-proxy.patch  0009-ci-enforce-Cargo.lock-and-publish-release-checksums-.patch  0010-ci-add-stealth-wreq-BoringSSL-build-test-job.patch  0011-fix-net-add-resolve-time-SSRF-guard-to-the-stealth-w.patch  README.txt  obscura-audit-fixes.bundle
skills/obscura/: SKILL.md
