[workspace]
resolver = "2"
members = [
    "crates/obscura-dom",
    "crates/obscura-net",
    "crates/obscura-browser",
    "crates/obscura-cdp",
    "crates/obscura-js",
    "crates/obscura-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/h4ckf0r0day/obscura"

[workspace.dependencies]
obscura-dom = { path = "crates/obscura-dom" }
obscura-net = { path = "crates/obscura-net" }
obscura-browser = { path = "crates/obscura-browser" }
obscura-cdp = { path = "crates/obscura-cdp" }
obscura-js = { path = "crates/obscura-js" }

html5ever = "0.29"
markup5ever = "0.14"
selectors = "0.26"
servo_arc = "0.4"
cssparser = "0.34"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
reqwest = { version = "0.13", features = ["cookies", "gzip", "brotli", "deflate", "rustls-no-provider"], default-features = false }
bssl-rustls-adapters = { git = "https://github.com/google/boringssl", rev = "04aa32f96f3094994a2971d703f7489b75b94f84" }
bssl-crypto = { git = "https://github.com/google/boringssl", rev = "04aa32f96f3094994a2971d703f7489b75b94f84" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
base64 = "0.22"
rustls = { version = "0.23", features = ["std"], default-features = false }
webpki-roots = "0.26"
