[package]
name = "obscura-js"
version.workspace = true
edition.workspace = true

[build-dependencies]
deno_core = "0.350"
deno_url = "0.207"
deno_webidl = "0.207"
deno_console = "0.207"

[dependencies]
obscura-dom = { workspace = true }
obscura-net = { workspace = true }
deno_core = "0.350"
deno_url = "0.207"
deno_webidl = "0.207"
deno_console = "0.207"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
html5ever = { workspace = true }
deno_error = "0.6"
base64 = { workspace = true }
sha1 = "0.10"
sha2 = "0.10"
