[package]
name = "obscura-net"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
bssl-rustls-adapters = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
bssl-crypto = { workspace = true, optional = true }

[features]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]
stealth = ["bssl-rustls-adapters", "rustls", "webpki-roots", "bssl-crypto"]
